# Agent

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/tests/: test_config.py  test_main.py
database/: README.md
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  components.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: button.tsx
